# vf_wgs

./: ComparisonSheet.csv  ComparisonSheet_flip.csv  README.md  pyproject.toml
code/: align_asms.sh  analyze_variants.sh  compare_refseq_vs_AP_asm.sh  copy_gd.py  fastani_visualize.py  filter_gd.py  make_denovo_assemblies.sh  nonpython_install.sh
output/fastani/: 1561denovo_vs_ASM1180v1_fastANI.tsv  1561denovo_vs_ASM1180v1_fastANI.tsv.visual  ASM1180v1_vs_newAP_fastANI.tsv  ASM1180v1_vs_newAP_fastANI.tsv.visual  ES114_2008_vs_new_fastANI.tsv  ES114_2008_vs_new_fastANI.tsv.visual
output/fastp/: VF_WT_1561.fastp.html  VF_WT_1561ER.fastp.html  VF_WT_1561TB.fastp.html  VF_WT_1562.fastp.html  VF_WT_1563.fastp.html  VF_WT_1563A.fastp.html  VF_WT_1563B.fastp.html  VF_WT_1563C.fastp.html  VF_WT_1563D.fastp.html  VF_WT_1564.fastp.html
output/variants/: ACS_sorted.bcf.gz.csi  ACS_sorted.vcf  WT_normalized.vcf  WT_sorted.bcf.gz.csi  exclusive_to_ACS.vcf  exclusive_to_WT.vcf  filtered_l10_u50.csv  filtered_l10_u50_flip.csv  merged.vcf  merged_ACS.vcf  merged_WT.vcf
output/variants/gd/: VF_WT_1561.gd  VF_WT_1561ER.gd  VF_WT_1561TB.gd  VF_WT_1562.gd  VF_WT_1563.gd  VF_WT_1563A.gd  VF_WT_1563B.gd  VF_WT_1563C.gd  VF_WT_1563D.gd  VF_WT_1564.gd
output/variants/vcf/: VF_WT_1561.bcf.gz.csi  VF_WT_1561.vcf  VF_WT_1561.vcf.gz.tbi  VF_WT_1561ER.bcf.gz.csi  VF_WT_1561ER.vcf  VF_WT_1561TB.bcf.gz.csi  VF_WT_1561TB.vcf  VF_WT_1562.bcf.gz.csi  VF_WT_1562.vcf  VF_WT_1562.vcf.gz.tbi  VF_WT_1563.bcf.gz.csi  VF_WT_1563.vcf  VF_WT_1563A.bcf.gz.csi  VF_WT_1563A.vcf  VF_WT_1563B.bcf.gz.csi  (+7 more)
